[package]
name = "glrepo"
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Mikael Hermansson <mike7b4@protonmail.com>"]
description = "A multi GIT project fetch tool inspired by google repo tool."
homepage = "https://gitlab.com/mike7b4/glrepo"
repository = "https://gitlab.com/mike7b4/glrepo.git"
readme = "readme.md"


[dependencies]
simple_logger = {version = "2", features = ["stderr"]}
colored = "2"
serde = {version = "1", features = ["derive"]}
log = "0.4"
git2 = "0.13"
clap = {version = "3", features = ["derive"]}
serde_yaml = "0.8"
